--- a/index.html
+++ b/index.html
@@ -2,157 +2,133 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Admin Recharge Portal</title>
+<title>Bhoomika e-Mitra Recharge Panel</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-body{
-    font-family: Arial;
-    background: linear-gradient(135deg,#0f2027,#203a43,#2c5364);
-    color:white;
-    text-align:center;
-}
-.box{
-    max-width:420px;
-    margin:40px auto;
-    background:#ffffff12;
-    padding:20px;
-    border-radius:15px;
-}
-input,select,button{
-    width:100%;
-    padding:12px;
-    margin:8px 0;
-    border:none;
-    border-radius:8px;
-}
-button{
-    background:#00c853;
-    color:white;
-    font-weight:bold;
-    cursor:pointer;
-}
-button:hover{background:#009624;}
-.plan{
-    background:#ffffff25;
-    padding:10px;
-    margin:5px;
-    border-radius:8px;
-    cursor:pointer;
-}
-#adminPanel{display:none;}
+body{font-family:Arial;background:#0f2027;color:white;text-align:center}
+.box{max-width:450px;margin:25px auto;background:#ffffff12;padding:20px;border-radius:15px}
+input,select,button{width:100%;padding:10px;margin:6px 0;border:none;border-radius:8px}
+button{background:#00c853;color:white;font-weight:bold}
+.plan{background:#ffffff25;padding:8px;margin:4px;border-radius:8px;cursor:pointer}
+#adminPanel{display:none}
+table{width:100%;font-size:13px;margin-top:10px}
+td,th{border-bottom:1px solid #ffffff22;padding:5px}
 </style>
 </head>
 
 <body>
 
-<h2>🔐 Recharge Admin Panel</h2>
+<h2>🔐 Bhoomika e-Mitra Admin Panel</h2>
 
 <!-- LOGIN -->
 <div class="box" id="loginPanel">
-    <h3>Login</h3>
-    <input type="text" id="adminId" placeholder="Enter ID">
-    <input type="password" id="adminPass" placeholder="Enter Password">
-    <button onclick="login()">Login</button>
+<form onsubmit="return login(event)">
+<input type="text" id="adminId" placeholder="Admin ID">
+<input type="password" id="adminPass" placeholder="Password">
+<button type="submit">Login</button>
+<div id="msg"></div>
+</form>
 </div>
 
 <!-- ADMIN PANEL -->
 <div class="box" id="adminPanel">
 
-    <h3>Dashboard</h3>
-    <p>Wallet: ₹ <span id="wallet">10000</span></p>
-    <p>Total Recharges: <span id="count">0</span></p>
+<h3>Wallet: ₹ <span id="wallet">10000</span></h3>
 
-    <hr>
+<h3>Add Balance</h3>
+<input type="number" id="addMoney" placeholder="Enter Amount">
+<button onclick="addBalance()">Add Wallet</button>
 
-    <h3>Mobile Recharge</h3>
+<hr>
 
-    <input type="text" id="mobile" placeholder="Mobile Number">
+<h3>Mobile Recharge</h3>
+<input type="text" id="mobile" placeholder="Mobile Number">
 
-    <select id="operator">
-        <option value="">Select Operator</option>
-        <option>Jio</option>
-        <option>Airtel</option>
-        <option>Vi</option>
-        <option>BSNL</option>
-    </select>
+<select id="operator">
+<option value="">Operator</option>
+<option>Jio</option>
+<option>Airtel</option>
+<option>Vi</option>
+<option>BSNL</option>
+</select>
 
-    <div id="plans"></div>
+<div id="plans"></div>
 
-    <input type="number" id="amount" placeholder="Amount">
+<input type="number" id="amount" placeholder="Amount">
+<button onclick="recharge()">Recharge & Print</button>
 
-    <button onclick="recharge()">Recharge</button>
-    <button onclick="logout()" style="background:red;">Logout</button>
+<hr>
+
+<h3>Recharge History</h3>
+<table id="history">
+<tr><th>No</th><th>Mobile</th><th>Amt</th></tr>
+</table>
+
+<button onclick="logout()" style="background:red">Logout</button>
 
 </div>
 
 <script>
 let wallet=10000;
-let rechargeCount=0;
+let count=0;
+let historyData=[];
 
 const plans=[149,199,239,299,399,479,666,719,999];
+let html="";
+plans.forEach(p=>{html+=<div class="plan" onclick="amount.value=${p}">₹${p}</div>});
+plansDiv.innerHTML=html;
 
-// LOAD PLANS
-function loadPlans(){
-    let html="";
-    for(let i=0;i<plans.length;i++){
-        html+=<div class="plan" onclick="selectPlan(${plans[i]})">₹${plans[i]} Plan</div>;
-    }
-    document.getElementById("plans").innerHTML=html;
-}
-loadPlans();
-
-// SELECT PLAN
-function selectPlan(p){
-    document.getElementById("amount").value=p;
+// LOGIN
+function login(e){
+e.preventDefault();
+if(adminId.value.trim()=="11223344" && adminPass.value.trim()=="123456"){
+loginPanel.style.display="none";
+adminPanel.style.display="block";
+}else msg.innerHTML="Wrong Login";
 }
 
-// LOGIN (FINAL WORKING)
-function login(){
-    let id=document.getElementById("adminId").value.trim();
-    let pass=document.getElementById("adminPass").value.trim();
-
-    if(id=="123" && pass=="000"){
-        document.getElementById("loginPanel").style.display="none";
-        document.getElementById("adminPanel").style.display="block";
-    }else{
-        alert("Wrong ID Password");
-    }
+// ADD BALANCE
+function addBalance(){
+let add=parseInt(addMoney.value);
+if(add>0){wallet+=add;walletSpan.innerText=wallet}
 }
-
-// LOGOUT
-function logout(){
-    document.getElementById("adminPanel").style.display="none";
-    document.getElementById("loginPanel").style.display="block";
-}
+const walletSpan=document.getElementById("wallet");
 
 // RECHARGE
 function recharge(){
-    let mobile=document.getElementById("mobile").value.trim();
-    let operator=document.getElementById("operator").value;
-    let amount=parseInt(document.getElementById("amount").value);
+let m=mobile.value;
+let amt=parseInt(amount.value);
+if(m.length!=10||wallet<amt)return alert("Invalid");
 
-    if(mobile.length!=10){
-        alert("Enter 10 digit mobile");
-        return;
-    }
-    if(operator==""){
-        alert("Select operator");
-        return;
-    }
-    if(wallet<amount){
-        alert("Low Balance");
-        return;
-    }
+wallet-=amt;
+walletSpan.innerText=wallet;
+count++;
 
-    wallet-=amount;
-    rechargeCount++;
-
-    document.getElementById("wallet").innerText=wallet;
-    document.getElementById("count").innerText=rechargeCount;
-
-    alert("Recharge Successful ₹"+amount);
+historyData.push({m,amt});
+updateHistory();
+printSlip(m,amt);
 }
+
+// HISTORY
+function updateHistory(){
+let t='<tr><th>No</th><th>Mobile</th><th>Amt</th></tr>';
+historyData.forEach((h,i)=>{t+=<tr><td>${i+1}</td><td>${h.m}</td><td>₹${h.amt}</td></tr>});
+history.innerHTML=t;
+}
+
+// PRINT
+function printSlip(m,amt){
+let w=window.open('','','width=300,height=400');
+w.document.write(`<h3>Bhoomika e-Mitra</h3>
+Mobile: ${m}<br>
+Amount: ₹${amt}<br>
+Status: Success`);
+w.print();
+}
+
+// LOGOUT
+function logout(){location.reload()}
 </script>
 
 </body>
